unpackaged/main/default/objects/Special_Buy__c/Special_Buy__c.object-meta.xml
<CustomObject>
    <description>This Object is a header representation of an external pricing table, used to group a number of Special Buy Lines (Products purchased for a non-standard Cost Price) purchased from a single supplier</description>
    <label>Special Buy</label>
    <nameField>
        <label>Special Buy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Special Buys</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>