unpackaged/main/default/objects/Special_Buy__c/fields/Deal_Owner_2__c.field-meta.xml
<CustomField>
    <fullName>Deal_Owner_2__c</fullName>
    <description>The deal owner of this special buy. This is a flat text field to accomodate non-Salesforce users.</description>
    <label>Deal Owner 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>