unpackaged/main/default/objects/Special_Buy__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <description>The date the Special Buy expires.</description>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>