unpackaged/main/default/objects/Special_Buy__c/fields/Location_Type__c.field-meta.xml
<CustomField>
    <fullName>Location_Type__c</fullName>
    <description>Country the special buy belongs</description>
    <label>Location Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Stores</fullName>
            </value>
            <value>
                <fullName>All Retail Stores</fullName>
            </value>
            <value>
                <fullName>All Trade Sites</fullName>
            </value>
            <value>
                <fullName>Store Specific</fullName>
            </value>
            <value>
                <fullName>All Trade Stores</fullName>
                <isActive>false</isActive>
                <label>All Trade Stores</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>