unpackaged/main/default/objects/Special_Buy__c/fields/Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Date__c</fullName>
    <description>The date the Special Buy starts</description>
    <label>Requested Date</label>
    <type>Date</type>
</CustomField>