unpackaged/main/default/objects/Special_Buy__c/fields/Special_Buy_Header_ID__c.field-meta.xml
<CustomField>
    <fullName>Special_Buy_Header_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>External ID of the special buy.</description>
    <externalId>true</externalId>
    <label>Special Buy Header ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>