unpackaged/main/default/objects/Special_Buy__c/fields/Special_Buy_Type__c.field-meta.xml
<CustomField>
    <fullName>Special_Buy_Type__c</fullName>
    <description>The type of special buy</description>
    <label>Special Buy Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Generic</fullName>
            </value>
            <value>
                <fullName>Customer Specific</fullName>
            </value>
            <value>
                <fullName>All Trade Sites</fullName>
                <isActive>false</isActive>
                <label>All Trade Sites</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>