unpackaged/main/default/objects/Special_Buy__c/fields/Supplier_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Contact_Email__c</fullName>
    <description>The supplier contact&#39;s email address.</description>
    <label>Supplier Contact Email</label>
    <type>Email</type>
</CustomField>