unpackaged/main/default/objects/Special_Buy__c/fields/Supplier_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Contact_Name__c</fullName>
    <description>The supplier contact&#39;s full name.</description>
    <label>Supplier Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>