unpackaged/main/default/objects/Special_Buy__c/fields/Supplier_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Contact_Phone__c</fullName>
    <description>The supplier contact&#39;s Phone number.</description>
    <label>Supplier Contact Phone</label>
    <type>Phone</type>
</CustomField>