unpackaged/main/default/objects/Special_Buy__c/fields/Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Name__c</fullName>
    <description>The name of the supplier.</description>
    <label>Supplier Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>