unpackaged/main/default/objects/Special_Buy__c/fields/Supplier_Number__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Number__c</fullName>
    <description>The supplier number.</description>
    <label>Supplier Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>