unpackaged/main/default/objects/Special_Buy__c/fields/Suppress_Expiry_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Suppress_Expiry_Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Suppresses expiry notifications to account owners related to customer special buys related to this special buy</description>
    <label>Suppress Expiry Notifications</label>
    <type>Checkbox</type>
</CustomField>