unpackaged/main/default/objects/Special_Buy__c/recordTypes/AU_Special_Buys.recordType-meta.xml
<RecordType>
    <fullName>AU_Special_Buys</fullName>
    <active>true</active>
    <description>Special buys avaiable for Australia</description>
    <label>AU Special Buys</label>
</RecordType>