unpackaged/main/default/objects/Special_Buy__c/recordTypes/NZ_Special_Buys.recordType-meta.xml
<RecordType>
    <fullName>NZ_Special_Buys</fullName>
    <active>true</active>
    <description>Special buys avaiable for New Zealand</description>
    <label>NZ Special Buys</label>
</RecordType>