unpackaged/main/default/objects/Special_Buy__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Supplier_Name__c</columns>
    <columns>Deal_Owner_1__c</columns>
    <columns>Requested_Date__c</columns>
    <columns>Expiry_Date__c</columns>
    <columns>Location_Type__c</columns>
    <columns>Suppress_Expiry_Notifications__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Special_Buy_Type__c</field>
        <operation>equals</operation>
        <value>Generic</value>
    </filters>
    <label>All Generic Special Buys</label>
</ListView>