unpackaged/main/default/objects/Special_Buy__c/listViews/CUSTOMER_SPECIFIC_SPECIAL_BUYS.listView-meta.xml
<ListView>
    <fullName>CUSTOMER_SPECIFIC_SPECIAL_BUYS</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Deal_Owner_1__c</columns>
    <columns>Special_Buy_Header_ID__c</columns>
    <columns>Special_Buy_Type__c</columns>
    <columns>States__c</columns>
    <columns>Supplier_Name__c</columns>
    <columns>Supplier_Number__c</columns>
    <columns>Country__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Special_Buy_Type__c</field>
        <operation>equals</operation>
        <value>Customer Specific</value>
    </filters>
    <label>CUSTOMER SPECIFIC SPECIAL BUYS</label>
</ListView>